# llms4nlp

./: README.md  check_candidate_probabilities.py  counterfact.ipynb  counterfact_3p_eval_results.json  counterfact_3p_eval_summary.json  counterfact_gpt2xl_20_example.py  counterfact_new_sample.json  counterfact_third-party-questions_dataset.json  dataset_generation.py  evaluate_dataset.py  gpt-xl.ipynb  previous_prompts.txt  pyproject.toml
EasyEdit/: edit.py  multimodal_edit.py  pyproject.toml  requirements.txt
EasyEdit/demo/EasySteer_demo/: utils.py
EasyEdit/demo/SafeEdit_demo/: utils.py
EasyEdit/easyedit.egg-info/: PKG-INFO  SOURCES.txt
EasyEdit/easyeditor/: device_config.py
EasyEdit/easyeditor/editors/: concept_editor.py  editor.py  multimodal_editor.py  per_editor.py  safety_editor.py  steer_editor.py
EasyEdit/easyeditor/evaluate/: evaluate.py  evaluate_uns.py  evaluate_utils.py  multimodal_evaluate.py
EasyEdit/easyeditor/models/dpo/: dpo_main.py
EasyEdit/easyeditor/util/: nethook.py
EasyEdit/examples/: MMEdit.md  MultimodalEdit.md  run_CKnowEdit.py  run_Hallueditbench.py  run_LLM_evaluation.py  run_ccks_SafeEdit_gpt2-xl.py  run_convsent_llama2.py  run_knowedit_llama2.py  run_safety_editing.py  run_santinization_llama2.py  run_zsre_llama2.py
hparams/ROME/.ipynb_checkpoints/: gpt-j-6b-checkpoint.yaml  qwen2.5-3b-checkpoint.yaml  qwen2.5-7b-checkpoint.yaml
logs/: results.json
outputs/counterfact_gpt2xl_20/: metrics.json  summary.json
outputs/counterfact_new_gtp2-xl_100_samples/: counterfact_3p_eval_results.json  counterfact_3p_eval_summary.json
(+35 files in other folders)
