[project]
name = "llms4nlp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "av==14.2.0",
    "datasets>=4.8.5",
    "easyedit",
    "einops==0.8.1",
    "fairscale==0.4.13",
    "gpustat==1.1",
    "higher==0.2.1",
    "hydra-core==1.3.2",
    "importlib-metadata==8.7.0",
    "iopath==0.1.10",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "matplotlib==3.10.7",
    "nltk==3.6.5",
    "numpy==2.2.6",
    "omegaconf==2.3.0",
    "openai==2.8.1",
    "opencv-python==4.12.0.88",
    "pandas==2.3.3",
    "peft==0.18.0",
    "pyarrow>=21.0.0",
    "pyyaml==6.0.3",
    "qwen-vl-utils==0.0.10",
    "rouge==1.0.1",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "sentence-transformers==3.2.1",
    "sentencepiece==0.2.1",
    "timm==1.0.22",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "tqdm>=4.66.3",
    "transformers==4.57.1",
    "zhipuai==2.1.5.20250415",
]

[tool.uv.workspace]
members = [
    "EasyEdit",
]

[tool.uv.sources]
easyedit = { workspace = true }
